Use maven-junit-plugin instead of surefire.